[gd_scene load_steps=6 format=3 uid="uid://d3gbo71kvck3p"]

[ext_resource type="Script" path="res://UI Elements/Scripts/ActionButton.gd" id="1_k2m7h"]
[ext_resource type="Texture2D" uid="uid://cqcvy47i656og" path="res://UI Elements/squareBorder.png" id="2_fu1ix"]
[ext_resource type="Texture2D" uid="uid://b23o2tejo3u6c" path="res://UI Elements/ClickedSquareBorder.png" id="3_6pkvl"]
[ext_resource type="Texture2D" uid="uid://d0git8cglstxm" path="res://UI Elements/blackHighlight.png" id="4_av4rr"]

[sub_resource type="LabelSettings" id="LabelSettings_0rutr"]
font_size = 10

[node name="ActionButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 80.0
script = ExtResource("1_k2m7h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 70.0
expand_mode = 1

[node name="gold_label" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 14.0
offset_top = 13.0
offset_right = 36.0
offset_bottom = 27.0
text = "10 G"
label_settings = SubResource("LabelSettings_0rutr")

[node name="gnome_flesh_label" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 45.0
offset_top = 13.0
offset_right = 67.0
offset_bottom = 27.0
text = "10 F
"
label_settings = SubResource("LabelSettings_0rutr")

[node name="credits_label" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 14.0
offset_top = 53.0
offset_right = 36.0
offset_bottom = 67.0
text = "10 F
"
label_settings = SubResource("LabelSettings_0rutr")

[node name="timer_label" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 45.0
offset_top = 53.0
offset_right = 67.0
offset_bottom = 67.0
text = "10 S
"
label_settings = SubResource("LabelSettings_0rutr")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 70.0
texture_normal = ExtResource("2_fu1ix")
texture_pressed = ExtResource("3_6pkvl")
texture_disabled = ExtResource("4_av4rr")
stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
